--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -96,7 +96,7 @@ nav a {
     margin-bottom: 20px;
 }
 
-.banner-discription {
+.banner-description {
     margin-top: 20px;
 }
 
@@ -120,4 +120,13 @@ main{
 
 .about-info{
     text-align: center;
+}
+
+#what-i-do-description{
+    padding: 30px 150px;
+}
+
+/* skill section style */
+.skill-container{
+    
 }
