--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -162,8 +162,8 @@ main section {
     gap: 50px;
 }
 
-.resume-item-institute{
-    margin-bottom: 20px ;
+.resume-item-institute {
+    margin-bottom: 20px;
     margin-top: 0px;
 }
 
@@ -178,11 +178,40 @@ main section {
     font-weight: 700;
 }
 
-.resume-container hr{
+.resume-container hr {
     margin: 30px;
 }
 
-.download-cv{
+.download-cv {
     text-align: center;
     margin-top: 50px;
+}
+
+/* footer style */
+footer {
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.social-link a{
+    margin-right: 25px;
+}
+
+.contact input[type="text"], input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
 }
